# pygame-tutor

./: HOWTO.md  README.md  pyproject.toml
pygametutor/: main.py
pygametutor/core/: base.py  code_viewer.py  loader.py  screen.py
pygametutor/lessons/: lesson_00_about.py  lesson_01_comet.py  lesson_02_physics.py  lesson_03_input.py  lesson_04_breakout.py  lesson_05_arkanoid.py
pygametutor/settings/: constants.py
