[project]
name = "pygame-tutor"
version = "0.1.8"
description = "Interactive educational platform for learning Pygame"
readme = "README.md"
authors = [{name = "Sergey Samoylov", email = "linews@yandex.ru"}]
license = {text = "GNU General Public License v3.0"}
requires-python = ">=3.8"
dependencies = ["pygame>=2.0.0"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.scripts]
pygame-tutor = "pygametutor.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pygametutor*"]

[tool.setuptools.package-data]
"pygametutor" = [
    "*.py",
    "*.md",
    "lessons/*.py",
    "lessons/img/*.png",
    "core/*.py",
    "settings/*.py"
]
